--- a/assets/template/tweet-template.html
+++ b/assets/template/tweet-template.html
@@ -1,4 +1,4 @@
 <head>
-    <meta http-equiv="refresh" content="0; URL=https://twitter.com/intent/tweet?text=Hybrid%20Cloud%20-%20Install%20Log%20Agent%20to%20monitor%20your%20server%20via%20CloudWatch%0A%23xlod%20%23aws%20%23devops%20%23automation%20%23monitor%20%23secops%20%23security%0A%0Ahttps%3A%2F%2Fdev.to%2Fanuvindhs%2Fhybrid-cloud-install-log-agent-to-monitor-your-server-via-cloudwatch-2flo%20 " />
+    <meta http-equiv="refresh" content="0; URL=https://twitter.com/intent/tweet?text= " />
   </head>
  
